make StandardOutputView OutputViewFactory id's unique

TODO: Question is whether this is enough, considering that
the numerical ID is random depending on the order of which
plugins get loaded. So far I see no problem with it as we
apparently only show these views when the first OutputJob
runs.

BUG: 287093